--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -11,26 +11,28 @@
 
     <application
         android:name="com.scanner.bth.CustomApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:name=".FlowPickActivity"
-            android:label="@string/title_activity_flow_pick" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".LogListActivity"
-            android:label="@string/title_activity_log_list" >
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity
+            android:name=".ScannerActivity"
+            android:label="ScannerActivity"
+            android:screenOrientation="portrait"
+             >
         </activity>
     </application>
 
